# cyclops

./: LICENSE  README.md  pyproject.toml
cyclops/: __init__.py  __main__.py  detector.py  img.py  recognise.py  train.py  validate.py
cyclops/media/: img.py  vid.py
output/: encodings.pkl
